--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body data-new-gr-c-s-check-loaded="14.1096.0" data-gr-ext-installed>
     <div id="root" style="height: 100vh">
 
+        <!-- HEADER BAR -->
         <div class="p-Home Flex1 bpt">
             <div class="p-Home Flex2 bpt">
                 <div class="p-Home Flex4 bpt">
