--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body data-new-gr-c-s-check-loaded="14.1096.0" data-gr-ext-installed>
     <div id="root" style="height: 100vh">
 
-        <!-- HEADER BAR -->
+        <!-- HEADER -->
         <div class="p-Home Flex1 bpt">
             <div class="p-Home Flex2 bpt">
                 <div class="p-Home Flex4 bpt">
@@ -544,7 +544,7 @@
             </div>
         </div>
 
-
+        <!-- FOOTER -->
         <div class="p-Home Flex117 bpt">
             <div class="p-Home Flex118">
                 <img class="p-Home Image64 bpt" src="https://atri-apps.github.io/restaurant_website/app-assets/616da2c309aa0721dacedf0a_logo-restaurante-x-template.svg"
